# agentic-insurance-claims-platform

./: .gitignore  ARCHITECTURE.md  COMPONENT_CONTRACTS.md  EVAL_REPORT.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  policy_loader.py
backend/app/agents/: base.py  decision_synthesizer.py  document_classifier.py  document_verifier.py  extractor.py  fraud_detector.py
backend/app/api/: routes_claims.py  routes_health.py  routes_uploads.py
backend/app/llm/: client.py
backend/app/llm/prompts/: extraction_prompts.py
backend/app/models/: claim.py  decision.py  documents.py  extraction_schema.py  policy.py
backend/app/orchestrator/: pipeline.py
backend/app/rules_engine/: coverage_calculator.py  eligibility.py  engine.py  exclusions.py  limits.py  preauth.py  waiting_periods.py
backend/app/utils/: confidence.py
backend/tests/eval/: run_test_cases.py
backend/tests/unit/: test_coverage_calculator.py  test_document_verifier.py  test_exclusions.py  test_extractor.py  test_fraud_detector.py  test_limits.py  test_waiting_periods.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BlockedClaimCard.tsx  DecisionCard.tsx  DocumentUpload.tsx  FraudSignals.tsx  PipelineSummary.tsx  TraceViewer.tsx
notebooks/: 01_environment_setup.ipynb  02_pdf_processing.ipynb  03_opencv_preprocessing.ipynb  04_paddleocr.ipynb  05_ollama_qwen.ipynb  06_complete_pipeline.ipynb  07_langgraph_claims_ingestion.ipynb
(+2 files in other folders)
